# webreaper

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SIEM_INTEGRATION.md  TOOLS.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
tests/: __init__.py  test_cli.py  test_resume.py
webreaper/: __main__.py  cli.py  cli_legacy.py  dependency_checker.py  paths_packs.py  scoring.py  utils.py
webreaper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
webreaper/core/: __init__.py  controller.py
webreaper/harvesters/: __init__.py  crtsh.py  robots.py  sitemap.py  wayback.py
webreaper/output/: __init__.py  exporters.py
webreaper/parsers/: gau.py  gospider.py  hakrawler.py  httpx.py  katana.py
webreaper/probes/: __init__.py  headers.py  js_extractor.py
webreaper/report/: render_md.py
webreaper/scoring/: __init__.py  reapscore.py
webreaper/storage/: __init__.py  raw_store.py
webreaper/tools/: __init__.py  content_patterns.py  registry.py  robots_sitemap.py  security_headers.py  technology_scorer.py
