[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webreaper"
version = "0.6.4"
description = "webReaper: harvest → probe → rank → report"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
webreaper = "webreaper.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[tool.setuptools]
packages = [
    "webreaper",
    "webreaper.parsers",
    "webreaper.report",
    "webreaper.harvesters",
    "webreaper.probes",
    "webreaper.scoring",
    "webreaper.output",
    "webreaper.storage",
    "webreaper.core"
]
